--- a/templates/layout/dashboard_base.html
+++ b/templates/layout/dashboard_base.html
@@ -76,6 +76,7 @@
                   <li><a href="/cashier/dashboard">Dashboard</a></li>
                   <li><a href="/cashier/enrollments">Danh sách đăng ký</a></li>
                   <li><a href="/cashier/invoices">Danh sách hóa đơn</a></li>
+                  <li><a href="/cashier/reports">Report</a></li>
               {% endif %}
 {##}
 {#        <!-- Admin -->#}
